# web_gear_sample

./: .env  .secrets.toml  pyproject.toml  settings.toml
tests/: test_web_gear_sample.py
web_gear_sample/: .env  .flaskenv  __init__.py  app.py
web_gear_sample/domain/dashboard/: __init__.py  dashboard.py
web_gear_sample/domain/dashboard/templates/: dashboard.html  dashboard.html.j2
web_gear_sample/domain/job_scheduler/: __init__.py  job_scheduler.py
web_gear_sample/domain/job_scheduler/templates/: job_manager.html.j2
web_gear_sample/domain/login/: __init__.py  login.py
web_gear_sample/domain/login/templates/: login.html.j2
web_gear_sample/ext/: configuration.py
web_gear_sample/ext/site/: __init__.py  bp_index.py
web_gear_sample/plugins/web_ui/: __init__.py  bp_index.py
web_gear_sample/static/css/: signin.css  web_app.css
web_gear_sample/static/js/: dashboard.js  page_init.js
web_gear_sample/templates/: base_page.html  base_page.html.j2  content_inc.html  footer_inc.html.j2  header_inc.html  index.html  side_bar_inc.html  side_bar_inc.html.j2
