[tool.poetry]
name = "web_gear_sample"
version = "0.1.0"
description = "WebApp using Flask"
authors = ["Marlos Ribeiro"]

[tool.poetry.dependencies]
python = "3.9"
Flask = "^2.1.3"
python-dotenv = "^0.20.0"
dynaconf = "^3.1.9"

[tool.poetry.dev-dependencies]
pytest = "^7"
autopep8 = "^1.6.0"
pylint = "^2.14.5"
Flask-DebugToolbar = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
